--- a/extra.mk.in
+++ b/extra.mk.in
@@ -1,3 +1,9 @@
+LIBMOWGLI_SHARED_LIB = @LIBMOWGLI_SHARED_LIB@
+LIBMOWGLI_STATIC_LIB = @LIBMOWGLI_STATIC_LIB@
+LIBMOWGLI_MODULES = @LIBMOWGLI_MODULES@
+LIBMOWGLI_SHARED_MODULES = @LIBMOWGLI_SHARED_MODULES@
+LIBMOWGLI_STATIC_MODULES = @LIBMOWGLI_STATIC_MODULES@
+LIBMOWGLI_OS = @LIBMOWGLI_OS@
+
 EXAMPLES_BUILD = @EXAMPLES_BUILD@
-MOWGLI_MODULE = @MOWGLI_MODULE@
-PTHREAD_LIBS = @PTHREAD_LIBS@
+
