--- a/src/libmowgli/eventloop/Makefile
+++ b/src/libmowgli/eventloop/Makefile
@@ -1,14 +1,13 @@
 include ../../../extra.mk
 
-STATIC_PIC_LIB_NOINST = mowgli.eventloop.a
+STATIC_PIC_LIB_NOINST = mowgli.eventloop.lib.a
+STATIC_LIB_NOINST = mowgli.eventloop.a
 
 SRCS = eventloop.c helper.c pollable.c timer.c null_pollops.c poll_pollops.c epoll_pollops.c kqueue_pollops.c select_pollops.c linebuf.c
 
 INCLUDES = eventloop.h
 
-includesubdir = $(PACKAGE)/eventloop
-
 include ../../../buildsys.mk
 
-CPPFLAGS += ${LIB_CPPFLAGS} -I. -I.. -I../../.. -DMOWGLI_CORE
-CFLAGS += ${LIB_CFLAGS}
+CPPFLAGS += -I. -I.. -I../../.. -DMOWGLI_CORE
+
