--- a/src/libmowgli/thread/Makefile
+++ b/src/libmowgli/thread/Makefile
@@ -1,6 +1,7 @@
 include ../../../extra.mk
 
-STATIC_PIC_LIB_NOINST = mowgli.thread.a
+STATIC_PIC_LIB_NOINST = mowgli.thread.lib.a
+STATIC_LIB_NOINST = mowgli.thread.a
 
 SRCS = mutex.c			\
        null_mutexops.c		\
@@ -10,9 +11,7 @@ SRCS = mutex.c			\
 
 INCLUDES = thread.h
 
-includesubdir = $(PACKAGE)/thread
-
 include ../../../buildsys.mk
 
-CPPFLAGS += ${LIB_CPPFLAGS} -I. -I.. -I../../.. -DMOWGLI_CORE
-CFLAGS += ${LIB_CFLAGS}
+CPPFLAGS += -I. -I.. -I../../.. -DMOWGLI_CORE
+
