--- a/src/libmowgli/vio/Makefile
+++ b/src/libmowgli/vio/Makefile
@@ -1,14 +1,13 @@
 include ../../../extra.mk
 
-STATIC_PIC_LIB_NOINST = mowgli.vio.a
+STATIC_PIC_LIB_NOINST = mowgli.vio.lib.a
+STATIC_LIB_NOINST = mowgli.vio.a
 
 SRCS = vio.c vio_openssl.c
 
 INCLUDES = vio.h vio-types.h
 
-includesubdir = $(PACKAGE)/vio
-
 include ../../../buildsys.mk
 
-CPPFLAGS += ${LIB_CPPFLAGS} -I. -I.. -I../../.. -DMOWGLI_CORE
-CFLAGS += ${LIB_CFLAGS}
+CPPFLAGS += -I. -I.. -I../../.. -DMOWGLI_CORE
+
