--- a/src/libmowgli/Makefile
+++ b/src/libmowgli/Makefile
@@ -12,6 +12,6 @@ include ../../buildsys.mk
 LIBS += ${PTHREAD_LIBS}
 CPPFLAGS += -I. -I../.. -DMOWGLI_CORE
 
-LIB_OBJS += ${LIBMOWGLI_SHARED_MODULES}
+LIB_OBJS := ${LIB_OBJS} ${LIBMOWGLI_SHARED_MODULES}
 OBJS += ${LIBMOWGLI_STATIC_MODULES}
 
