Ensure includes get installed correctly.

--- a/src/libmowgli/atomic/Makefile
+++ b/src/libmowgli/atomic/Makefile
@@ -7,6 +7,8 @@ SRCS = spinlock.c
 
 INCLUDES = atomic.h spinlock.h
 
+includesubdir = $(PACKAGE)/atomic
+
 include ../../../buildsys.mk
 
 CPPFLAGS += -I. -I.. -I../../.. -DMOWGLI_CORE
