--- a/src/libmowgli/base/Makefile
+++ b/src/libmowgli/base/Makefile
@@ -21,6 +21,8 @@ INCLUDES = argstack.h		\
 	   random.h		\
 	   mowgli_signal.h
 
+includesubdir = $(PACKAGE)/base
+
 include ../../../buildsys.mk
 
 CPPFLAGS += -I. -I.. -I../../.. -DMOWGLI_CORE
