--- a/src/libmowgli/eventloop/Makefile
+++ b/src/libmowgli/eventloop/Makefile
@@ -7,6 +7,8 @@ SRCS = eventloop.c helper.c pollable.c timer.c null_pollops.c poll_pollops.c epo
 
 INCLUDES = eventloop.h
 
+includesubdir = $(PACKAGE)/eventloop
+
 include ../../../buildsys.mk
 
 CPPFLAGS += -I. -I.. -I../../.. -DMOWGLI_CORE
