--- a/src/libmowgli/module/Makefile
+++ b/src/libmowgli/module/Makefile
@@ -7,6 +7,8 @@ SRCS = loader_${LIBMOWGLI_OS}.c
 
 INCLUDES = module.h
 
+includesubdir = $(PACKAGE)/module
+
 include ../../../buildsys.mk
 
 CPPFLAGS += -I. -I.. -I../../.. -DMOWGLI_CORE
