--- a/src/libmowgli/object/Makefile
+++ b/src/libmowgli/object/Makefile
@@ -13,6 +13,8 @@ INCLUDES = object.h	\
 	   message.h	\
 	   metadata.h
 
+includesubdir = $(PACKAGE)/object
+
 include ../../../buildsys.mk
 
 CPPFLAGS += -I. -I.. -I../../.. -DMOWGLI_CORE
