--- a/src/libmowgli/platform/win32/Makefile
+++ b/src/libmowgli/platform/win32/Makefile
@@ -7,6 +7,8 @@ SRCS = gettimeofday.c pipe.c setenv.c
 
 INCLUDES = win32_stdinc.h
 
+includesubdir = $(PACKAGE)/platform/win32
+
 include ../../../../buildsys.mk
 
 CPPFLAGS += -I. -I.. -I../.. -I../../../.. -DMOWGLI_CORE
