Abruptly changing people's file layout is rude.

--- a/src/libmowgli/platform/autoconf.h.in
+++ b/src/libmowgli/platform/autoconf.h.in
@@ -1,4 +1,4 @@
-/* config.h.in.  Generated from configure.ac by autoheader.  */
+/* src/libmowgli/platform/autoconf.h.in.  Generated from configure.ac by autoheader.  */
 
 /* Define to 1 if you have the `fcntl' function. */
 #undef HAVE_FCNTL
