Add missing versioning information back.
This is a regression that was introduced when the build system was overhauled.

--- a/src/libmowgli/Makefile
+++ b/src/libmowgli/Makefile
@@ -1,5 +1,8 @@
 include ../../extra.mk
 
+LIB_MAJOR = 0
+LIB_MINOR = 0
+
 SHARED_LIB = ${LIBMOWGLI_SHARED_LIB}
 STATIC_LIB = ${LIBMOWGLI_STATIC_LIB}
 
