Fix header installation.

--- a/configure.ac
+++ b/configure.ac
@@ -115,7 +115,7 @@ AC_SUBST(EXAMPLES_BUILD)
 BUILDSYS_INIT
 BUILDSYS_TOUCH_DEPS
 
-AC_SUBST(PACKAGE)
+AC_SUBST(PACKAGE_NAME)
 
 AC_CONFIG_FILES([buildsys.mk extra.mk libmowgli-2.pc])
 AC_OUTPUT
