atomic: rip this out.
It's not really necessary since C11 has better atomic stuff that's more
portable (not to mention Linux and probably other platforms have better
atomics support anyway).

--- a/configure.ac
+++ b/configure.ac
@@ -30,7 +30,7 @@ AC_CHECK_FUNCS([fcntl kqueue mmap select])
 AC_PATH_PROG(AR, ar)
 AC_PATH_PROG(RANLIB, ranlib)
 
-LIBMOWGLI_MODULES="core base atomic container eventloop ext module object thread vio"
+LIBMOWGLI_MODULES="core base container eventloop ext module object thread vio"
 AC_SUBST(LIBMOWGLI_MODULES)
 
 LIBMOWGLI_SHARED_MODULES=""
