linebuf: move to its own module.
It's somewhat of an ugly duckling in the eventloop module and has
dependencies on the VIO code which nothing else in the eventloop module
requires.

--- a/src/libmowgli/eventloop/Makefile
+++ b/src/libmowgli/eventloop/Makefile
@@ -3,7 +3,7 @@ include ../../../extra.mk
 STATIC_PIC_LIB_NOINST = mowgli.eventloop.lib.a
 STATIC_LIB_NOINST = mowgli.eventloop.a
 
-SRCS = eventloop.c helper.c pollable.c timer.c null_pollops.c poll_pollops.c epoll_pollops.c kqueue_pollops.c select_pollops.c linebuf.c
+SRCS = eventloop.c helper.c pollable.c timer.c null_pollops.c poll_pollops.c epoll_pollops.c kqueue_pollops.c select_pollops.c
 
 INCLUDES = eventloop.h
 
