memslice: install resources with SDK, and initialize subsystem at start time

--- a/src/libmowgli/base/Makefile
+++ b/src/libmowgli/base/Makefile
@@ -17,6 +17,7 @@ INCLUDES = argstack.h		\
 	   formatter.h		\
 	   hash.h		\
 	   hook.h		\
+	   memslice.h		\
 	   random.h		\
 	   mowgli_signal.h
 
