--- a/src/libmowgli/linebuf/Makefile
+++ b/src/libmowgli/linebuf/Makefile
@@ -1,7 +1,7 @@
 include ../../../extra.mk
 
-STATIC_PIC_LIB_NOINST = mowgli.linebuf.lib.a
-STATIC_LIB_NOINST = mowgli.linebuf.a
+STATIC_PIC_LIB_NOINST = ${LIBMOWGLI_SHARED_LINEBUF}
+STATIC_LIB_NOINST = ${LIBMOWGLI_STATIC_LINEBUF}
 
 SRCS = linebuf.c
 
