--- a/src/libmowgli/module/Makefile
+++ b/src/libmowgli/module/Makefile
@@ -1,7 +1,7 @@
 include ../../../extra.mk
 
-STATIC_PIC_LIB_NOINST = mowgli.module.lib.a
-STATIC_LIB_NOINST = mowgli.module.a
+STATIC_PIC_LIB_NOINST = ${LIBMOWGLI_SHARED_MODULE}
+STATIC_LIB_NOINST = ${LIBMOWGLI_STATIC_MODULE}
 
 SRCS = loader_${LIBMOWGLI_OS}.c
 
