Fix conditional linking.

--- a/src/libmowgli/Makefile
+++ b/src/libmowgli/Makefile
@@ -10,11 +10,10 @@ SUBDIRS = ${LIBMOWGLI_MODULES} platform
 
 INCLUDES = mowgli.h
 
+LIB_OBJS_EXTRA = ${LIB_OBJS} ${LIBMOWGLI_SHARED_MODULES}
+OBJS_EXTRA = ${LIBMOWGLI_STATIC_MODULES}
+
 include ../../buildsys.mk
 
 LIBS += ${PTHREAD_LIBS}
 CPPFLAGS += -I. -I../.. -DMOWGLI_CORE
-
-LIB_OBJS := ${LIB_OBJS} ${LIBMOWGLI_SHARED_MODULES}
-OBJS += ${LIBMOWGLI_STATIC_MODULES}
-
