vio: move some files around to match standard naming convention.

--- a/src/libmowgli/vio/Makefile
+++ b/src/libmowgli/vio/Makefile
@@ -3,7 +3,7 @@ include ../../../extra.mk
 STATIC_PIC_LIB_NOINST = ${LIBMOWGLI_SHARED_VIO}
 STATIC_LIB_NOINST = ${LIBMOWGLI_STATIC_VIO}
 
-SRCS = vio.c vio-sockets.c vio-openssl.c
+SRCS = vio.c vio_sockets.c vio_openssl.c
 
 INCLUDES = vio.h
 
