Made atomic ops more type safe and sane

--- a/src/libmowgli/concurrent/Makefile
+++ b/src/libmowgli/concurrent/Makefile
@@ -3,9 +3,9 @@ include ../../../extra.mk
 STATIC_PIC_LIB_NOINST = ${LIBMOWGLI_SHARED_CONCURRENT}
 STATIC_LIB_NOINST = ${LIBMOWGLI_STATIC_CONCURRENT}
 
-SRCS = future.c
+SRCS = atomic.c future.c
 
-INCLUDES = future.h atomic.h
+INCLUDES := ${SRCS:.c=.h}
 
 include ../../../buildsys.mk
 
