--- a/src/libmowgli/platform/autoconf.h.in
+++ b/src/libmowgli/platform/autoconf.h.in
@@ -6,8 +6,8 @@
 /* Define if compiler provides C11 atomic builtins */
 #undef HAVE_ATOMIC_BUILTINS_C11
 
-/* Define if compiler provides GCC atomic builtins */
-#undef HAVE_ATOMIC_BUILTINS_GCC
+/* Define if compiler provides Intel atomic builtins */
+#undef HAVE_ATOMIC_BUILTINS_INTEL
 
 /* Define to 1 if you have the `dispatch_block' function. */
 #undef HAVE_DISPATCH_BLOCK
