Change mowgli_thread to use create/init/deinit/destroy API style

--- a/src/libmowgli/thread/Makefile
+++ b/src/libmowgli/thread/Makefile
@@ -8,7 +8,7 @@ SRCS = mutex.c			\
        posix_mutexops.c		\
        win32_mutexops.c
 
-INCLUDES = thread.h
+INCLUDES = thread.h mutex.h
 
 include ../../../buildsys.mk
 
