--- a/src/libmowgli/vio/Makefile
+++ b/src/libmowgli/vio/Makefile
@@ -9,7 +9,7 @@ INCLUDES = vio.h
 
 include ../../../buildsys.mk
 
-includesubdir = $(PACKAGE)/vio
+includesubdir = $(PACKAGE_NAME)/vio
 
 CPPFLAGS += -I. -I.. -I../../.. -DMOWGLI_CORE
 
