--- a/src/libmowgli/dns/Makefile
+++ b/src/libmowgli/dns/Makefile
@@ -3,13 +3,14 @@ include ../../../extra.mk
 STATIC_PIC_LIB_NOINST = ${LIBMOWGLI_SHARED_DNS}
 STATIC_LIB_NOINST = ${LIBMOWGLI_STATIC_DNS}
 
-SRCS = dns.c	\
-       res.c	\
-       reslib.c
+SRCS = dns.c			\
+       dns_evloop_res.c		\
+       dns_evloop_reslib.c	\
+       dns_evloop_reslist_win32.c
 
-INCLUDES = dns.h	\
-           res.h	\
-           reslib.h
+INCLUDES = dns.h		\
+           dns_evloop_res.h	\
+           dns_evloop_reslib.h
 
 include ../../../buildsys.mk
 
