--- a/src/examples/Makefile
+++ b/src/examples/Makefile
@@ -1,3 +1,3 @@
-SUBDIRS = echoserver vio-udplistener formattertest helpertest libevent-bench linetest listsort memslice-bench patriciatest patriciatest2 randomtest timertest futuretest
+SUBDIRS = echoserver vio-udplistener async_resolver formattertest helpertest libevent-bench linetest listsort memslice-bench patriciatest patriciatest2 randomtest timertest futuretest
 
 include ../../buildsys.mk
