--- a/.gitignore
+++ b/.gitignore
@@ -20,12 +20,16 @@ src/examples/linetest/linetest
 src/examples/memslice-bench/memslice-bench
 src/examples/vio-udplistener/vio-udplistener
 src/examples/futuretest/futuretest
+src/examples/async_resolver/async_resolver
 .deps
 *.dylib
 *.o
 *.a
 *.so
 *.so.*
+*.lib
+*.dll
+*.exe
 *~
 *.core
 core
