--- a/src/libmowgli/ext/Makefile
+++ b/src/libmowgli/ext/Makefile
@@ -7,13 +7,15 @@ SRCS = confparse.c 			\
        error_backtrace.c		\
        getopt_long.c			\
        global_storage.c 		\
-       program_opts.c
+       program_opts.c			\
+       proctitle.c
 
 INCLUDES = confparse.h			\
 	   error_backtrace.h		\
 	   getopt_long.h		\
 	   global_storage.h		\
-	   program_opts.h
+	   program_opts.h		\
+	   proctitle.h
 
 include ../../../buildsys.mk
 
