Readd dictionary type.

--- a/src/libmowgli/container/Makefile
+++ b/src/libmowgli/container/Makefile
@@ -3,12 +3,14 @@ include ../../../extra.mk
 STATIC_PIC_LIB_NOINST = ${LIBMOWGLI_SHARED_CONTAINER}
 STATIC_LIB_NOINST = ${LIBMOWGLI_STATIC_CONTAINER}
 
-SRCS = list.c 		\
+SRCS = dictionary.c	\
+       list.c 		\
        queue.c		\
        index.c		\
        patricia.c
 
-INCLUDES = list.h	\
+INCLUDES = dictionary.h	\
+	   list.h	\
 	   queue.h	\
 	   index.h	\
 	   patricia.h
